<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="jp.co.stream.jstplayerdemo.Other_250"
    tools:showIn="@layout/activity_other_250">

    <TextView
        android:id="@+id/txt250"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_activity_other_250"
        />

    <Button
        android:id="@+id/btn251"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_activity_other_network_251"
        />

    <Button
        android:id="@+id/btn252"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="210dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_activity_other_abr_252"
        />

    <Button
        android:id="@+id/btn253"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="270dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_activity_other_failover_253"
        />

</androidx.constraintlayout.widget.ConstraintLayout>