<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="jp.co.stream.jstplayerdemo.Player_210"
tools:showIn="@layout/activity_player_210">

    <TextView
        android:id="@+id/txt210"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_activity_player_210"
        />

    <Button
        android:id="@+id/btn211"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_activity_player_live_211"
        />

    <Button
        android:id="@+id/btn212"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="210dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_activity_player_dvr_212"
        />

    <Button
        android:id="@+id/btn213"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="270dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_activity_player_vod_213"
        />

    <Button
        android:id="@+id/btn214"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="330dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        android:text="ALL"
        />

</androidx.constraintlayout.widget.ConstraintLayout>