<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="jp.co.stream.jstplayerdemo.Menu_200"
    tools:showIn="@layout/activity_menu_200">

    <TextView
        android:id="@+id/txt200"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_activity_menu_200"
        />

    <TextView
        android:id="@+id/txtServerIDLabel"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="ServerID:"
        />
    <TextView
        android:id="@+id/txtServerID"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text=""
        />

    <TextView
        android:id="@+id/txtServerStatusLabel"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="ServerStatus:"
        />
    <TextView
        android:id="@+id/txtServerStatus"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text=""
        />

    <Button
        android:id="@+id/btnServerStart"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="210dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Start"
        />

    <Button
        android:id="@+id/btnServerStop"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="210dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Stop"
        />


    <Button
        android:id="@+id/btn210"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="330dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_activity_player_210"
        />

    <Button
        android:id="@+id/btn220"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="390dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_activity_ad_220"
        />

    <Button
        android:id="@+id/btn230"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="450dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_activity_subtitle_230"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/btn240"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="510dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_activity_multiplexing_240"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/btn250"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="570dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_activity_other_250"
        android:visibility="gone"
        />


</androidx.constraintlayout.widget.ConstraintLayout>